--- a/React/Template2/src/assets/styles/components/Navbar.scss
+++ b/React/Template2/src/assets/styles/components/Navbar.scss
@@ -1,3 +1,11 @@
 .navbar {
     background-color: $color1;
 }
+
+.navbar_link a {
+  text-decoration: none !important;
+  color: $color2;
+  &:hover {
+    color: $color4;
+  }
+}
